--- a/src/app/components/secondbrain/widget/secondbrain.widget.component.css
+++ b/src/app/components/secondbrain/widget/secondbrain.widget.component.css
@@ -60,7 +60,7 @@
 }
 
 .input-group input {
-  padding: 2px 6px;
+  padding: 0px 3px;
   border-radius: 4px;
   border: 1px solid #555;
   background: #111;
@@ -111,7 +111,7 @@
   width: 1.5rem;
   height: 2rem;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1rem;
   border-radius: 6px;
   border: 1px solid #ccc;
   transition: border-color 0.2s;
@@ -122,6 +122,10 @@
   outline: none;
 }
 
+
+.email-certi-wrapper.inactive {
+  display: none;
+} 
 
 /*
 -------------------------------------------------------------------------------------- 
