--- a/src/app/components/secondbrain/widget/secondbrain.widget.component.html
+++ b/src/app/components/secondbrain/widget/secondbrain.widget.component.html
@@ -5,32 +5,7 @@
       <button class="connect-btn" (click)="onClickConnectBtn()">
         CONNECT
       </button>
-    </div>
-    
-    <!-- <div *ngIf="state=='connect-client'">
-        회원가입 됨 => 유저 이름 표시 가능
-        이 클라이어트 연결이 안된 상태
-        전체 클라이언트 연결 상태 표시 / 연결 끊기 버튼 
-        보안을 위해서 가능한 '연결 끊기' 상태로 해두기
-        연결끊기 후 다시 이메일인증하면 연결됨
-
-        => 전체 연결 끊기 (노션 연결 포함해서) 
-        => 이 장치만 연결 끊기
-
-        1. clientId없이 불린 경우 
-        웹에서 클라이언트 url을 생성함 => 클라이언트에서 등록함 Notionable/secondbrain/clientId [ 복사 ]
-        오른쪽 상단 메뉴에 '...' 클릭 > 바꾸기 선택 후 '붙여넣기'
-
-        2. clientId있는 상태로 불린 경우  
-        
-        Notionable/secondbrain/clientId에서 서버에서 발행한 clientId 인증키 localhost에 등록 
-        이 인증키는 보안상 1주일간 유효합니다.
-      
-        로그인 / 로그아웃
-
-        이 장치에서만 로그아웃합니다.
-    </div> -->
-    
+    </div>    
 
     <!-- <div *ngIf="state=='session'">
       session - 인증은 되었는데 API연동은 아직 안된 상태
@@ -53,14 +28,14 @@
         <small class="info-text"
               style="display:block; padding: 8px 16px; line-height: 1.5em; font-size: 12px; color: #959595; margin-bottom: 18px; text-align: left;">
           • <span style="color: #fd5712;">노션 모바일 앱에서는 새 창이 열리지 않아 연결을 완료 할 수 없습니다.</span><br/>
-          • <span style="color: #fd5712;">세컨드브레인 API를 처음 연결 하실 때는 <strong>웹브라우저</strong> 환경에서만 진행할 수 있습니다.</span><br/>
+          • <span style="color: #fd5712;">세컨드브레인 API를 <strong>처음 연결 하실 때</strong>는 <strong>웹브라우저</strong> 환경에서만 진행할 수 있습니다.</span><br/>
           • 기타 API 연결 및 이용 관련 문의는 <strong>toto791&#64;gmail.com</strong>으로 연락해 주세요.<br/>
         </small>
       </div>
     </ng-container>
 
     <!-- emial -->
-    <ng-container *ngIf="state=='email-input'">
+    <ng-container *ngIf="state=='email-input-'">
       <div class="connect-container">
         <div class="info-text"
           style="display:block;padding: 0 16px; line-height: 1.0em; font-size: 0.875rem; color:#ffffff; margin-bottom: 0px;font-size: 16px;">
@@ -91,7 +66,7 @@
         <br/>
         <small class="info-text"
               style="display:block; padding: 0 16px; line-height: 1.5em; font-size: 12px; color: #959595; margin-bottom: 18px; text-align: left;">
-          • <span style="color: #b34347;">세컨드브레인 API를 처음 연결 하실 때는 <strong>웹브라우저</strong> 환경에서만 진행할 수 있습니다.</span><br/>
+          • <span style="color: #b34347;">세컨드브레인 API를 <strong>처음 연결 하실 때</strong>는 <strong>웹브라우저</strong> 환경에서만 진행할 수 있습니다.</span><br/>
           • <span style="color: #b34347;">연결 후 <strong>모바일 장치</strong>에서 추가 연결 할 수 있으며, 각 장치에서는 보안상 별도 인증이 필요합니다.</span><br/>
           • 세컨드브레인 API는 노션 계정당 LifeUp 템플릿 1개만 사용 가능합니다. 연결 할 때 이용 할 템플릿을 선택해주세요.<br/>
           • 구매 시 등록한 이메일을 잊어버린 경우, 현재 사용 중인 이메일로 먼저 연결 한 후 관리자에게 문의해주세요.<br/>
@@ -102,6 +77,70 @@
       </div>
     </ng-container>
 
+    <ng-container *ngIf="state=='email-input'">
+      <div class="connect-container sb-change-url">
+          <!-- <div class="info-text title-text">
+            <strong>이메일 인증 완료</strong>
+          </div> -->
+          <div class="info-text"
+              style="display:block;padding: 0 16px; line-height: 0.65em; color:#ffffff; margin-bottom: 0px;font-size: 22px;">
+              <strong>이메일 인증 완료</strong><br><br>
+          </div>
+          <small class="info-text"
+              style="display:block; padding: 0 16px; line-height: 1.5em; font-size: 0.875rem; color: #aaaaaa; margin-bottom: 18px;font-size: 12px;">
+            다음으로 세컨드브레인 위젯 주소를 교체합니다.<br>
+            아래 내용을 보시고 진행해주세요.
+          </small>
+          <!-- <small class="info-text desc-text">
+            이메일 인증이 완료되었습니다.<br />
+            아래 단계만 진행하시면 세컨드브래인 위젯 연결이 마무리됩니다.
+          </small> -->
+
+          <!-- STEP 1 -->
+          <small class="info-text step-title">
+            1️⃣ 내 위젯 주소 복사
+          </small>
+
+           <!-- <input type="text" placeholder="이메일을 입력해주세요." [(ngModel)]="email"
+            style="padding: 8px; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; width: 14ch; box-sizing: border-box;width: 24ch;font-size: 13px;" />
+          <button [disabled]="isEmailSending" 
+                  (click)="onSubmitEmail()"
+                  [ngClass]="{'btn-disabled': isEmailSending, 'btn-active': !isEmailSending}">
+            확인
+          </button> -->
+
+          <div class="input-group" style="margin: 12px 0 16px;">
+            <input type="text" placeholder="이메일을 입력해주세요." [(ngModel)]="clientUrl"
+              style="padding: 8px; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; width: 14ch; box-sizing: border-box;width: 42ch;font-size: 12px;">
+            <button class="btn-active" (click)="copyUrl()">
+              복사
+            </button>
+          </div>
+
+          <!-- <small class="info-text hint-text">
+            보안 및 개인화 설정을 위해 위젯 주소를 변경해야 합니다.
+          </small> -->
+
+          <!-- STEP 2 -->
+          <small class="info-text step-title">
+            2️⃣ 노션에서 SecondBrain 위젯 주소 바꾸기
+          </small>
+
+          <!-- <small class="info-text list-text">
+            • 위젯 우측 상단 <strong> ⋯ 메뉴</strong> 클릭<br /> <strong>바꾸기</strong> 선택<br />
+            • 주소 붙여넣기 후 <strong>링크 임베드</strong> 선택
+          </small> -->
+
+          <div class="image-placeholder">
+            이미지 안내 영역
+          </div>
+
+          <small class="info-text warning-text">
+            ※ 위젯 주소를 변경하지 않으면 인증이 적용되지 않습니다.
+          </small>
+        </div>
+    </ng-container>
+    
     <!-- certification -->
     <div class="email-certi-wrapper" [class.inactive]="state !== 'email-certification'">
       <div class="connect-container">
@@ -225,7 +264,7 @@
     </div>
   </ng-container> -->
 
-    <ng-container *ngIf="state=='change-client-url'">
+    <!-- <ng-container *ngIf="state=='change-client-url'">
 
       이 위치에 세컨드브레인 고유 위젯 주소입니다.
       이 주소를 현재 주소와 교체를 진행해야 다음단계로 노션 연결이 진행됩니다. 
@@ -239,7 +278,48 @@
 
       바꾸기 그림 설명
 
-    </ng-container>
+      'change-client-url'
+    </ng-container> -->
+
+
+    
+    <!-- <div *ngIf="state=='connect-client'">
+        이메일 인증와 완료 되었습니다. 
+        두가지 작업이 더 남았습니다. 
+
+        첫째, 세컨드브래인 위젯의 주소를 바꿔주세요. (보안과 개인화 설정을 위해)        
+ 
+        1. 위젯 주소를 복사 한 후 
+        [ {{email}}                           ] [복사]
+
+        2 위젯 오른쪽 상단 ... 메뉴 클릭 > 바꾸기 > 붙여넣기 > 링크 임베드 
+
+        여기는 이미지로 안내 예정        
+
+        <div *ngIf="state=='success'" class="success-wrapper">
+          <div class="success-card">
+            <h1 class="title">🎉 Notion ↔ API 연결 성공!</h1>
+
+            <p class="desc">
+              SecondBrain API 연결키를 성공적으로 발급했습니다.<br>
+              ⚠️아래의 연결키를 <strong>LifeUp 템플릿 세컨드브래인 위젯</strong>에 등록해주셔야
+              연결이 완료됩니다.
+            </p>
+
+            <div class="key-box">
+              <input
+                type="text"
+                class="key-input"
+                [value]="botId"
+                readonly
+              />
+              <button class="copy-btn" (click)="copyKey()">
+                복사
+              </button>
+            </div>
+          </div>
+        </div> 
+    </div>  -->
 
     <!-- 연결 성공 표시 -->
     <ng-container *ngIf="state=='success'">
@@ -314,7 +394,7 @@
       <!-- 메뉴 -->
       <div class="graph-menu" *ngIf="isMenuOpen" (click)="$event.stopPropagation()">
         <!-- 창 열기 -->
-        <button class="menu-item" (click)="onClickSettings()">
+        <!-- <button class="menu-item" (click)="onClickSettings()">
           <span class="menu-icon">
             <svg style="width: 23px; height: 23px;" viewBox="0 0 24 24" fill="none">
               <path d="M7 17L17 7M17 7H8M17 7V16"
@@ -325,7 +405,7 @@
             </svg>
           </span>
           <span class="menu-text">창 열기</span>
-        </button>
+        </button> -->
 
         <!-- 설정 -->
         <button class="menu-item divider" (click)="onClickSettings()">
