--- a/src/app/components/secondbrain/connect/secondbrain.connect.component.html
+++ b/src/app/components/secondbrain/connect/secondbrain.connect.component.html
@@ -54,11 +54,7 @@
   </div> 
 
   <div *ngIf="state === 'connected'">
-    connected
-    integration > secondbrain 에 데이타를 가져와서
-
-    연결정보 : secondbrain에 연결됨 
-    연결이 안된 경우 
+    연결을 시도하지만 이미 연결이 된 경우입니다. toto791&#64;gmail.com으로 문의주세요.
   </div>
 </div>
 
