--- a/src/app/components/secondbrain/widget/secondbrain.widget.component.html
+++ b/src/app/components/secondbrain/widget/secondbrain.widget.component.html
@@ -322,14 +322,14 @@
     <ng-container *ngIf="state=='graph-nodata'">
       <div class="success-wrapper">
         <div class="success-card">
-          <h1 class="title">⛔ 그래프를 표시할 데이터가 없습니다.</h1>
+          <h1 class="title"> 🎉 그래프를 표시할 준비가 되었습니다.</h1>
 
           <small class="info-text"
               style="display:block; padding: 0 16px; line-height: 1.5em; font-size: 13px; color: #959595; margin-bottom: 18px; text-align: left;">
-            • 노트를 편집하면 자동으로 AI가 키워드 추출합니다.(소요시간 약 2분)<br>
-            • 추출된 키워드를 기반으로 그래프가 그려집니다.<br>
-            • 현재는 베타버전으로 기존 노트의 일괄변환이 지원되지 않으며, 한번 요청에 5개씩 수동 변환됩니다.(소요시간 약 5분)<br>
-            • 하단 <span style="color: #fd5712;">키워드 추츨</span> 메뉴를 통해 5개씩 추가로 전환 할 수 있습니다.
+            • 아직 표시할 데이터가 없습니다. 
+            • 노트를 작성하면 AI가 자동으로 키워드를 추출해 그래프를 생성합니다.<br><br>
+            • 이미 작성된 노트가 있다면 아래 버튼을 눌러 <span style="color: #fd5712;">키워드 전환</span>을 진행하세요.<br>
+              (한 번에 5개씩 처리되며 약 5분 소요됩니다. 요청 후 페이지를 나가도 됩니다.)<br>
           </small>
 
            <!-- <small class="info-text"
@@ -352,7 +352,7 @@
           </p> -->
 
           <button class="home-btn" (click)="onClickGenerateNotionNoteKMDataBatch()">
-            AI 노트 데이터 전환하기 - 5개
+            AI 노트 데이터 전환하기
           </button>
         </div>
       </div>
